--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"author": "Sergey Drynkin",
 	"private": true,
 	"dependencies": {
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"axios": "^1.5.0",
+		"framer-motion": "^10.16.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-redux": "^7.2.6",
 		"react-scripts": "5.0.0",
 		"redux": "^4.1.2"
